--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ requires = ["setuptools>=61.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "userclouds-sdk-python"
-version = "1.0.0"
+name = "usercloudssdk"
+version = "1.0.2"
 description = "Python SDK for UserClouds"
 authors = [{ name = "Real Python", email = "info@realpython.com" }]
 license = { file = "LICENSE" }
