--- a/.github/workflows/pyhton-ci.yaml
+++ b/.github/workflows/pyhton-ci.yaml
@@ -20,8 +20,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install black ruff
+        python -m pip install black ruff pyupgrade
     - name: Lint
       run: |
         black --check src/
         ruff check src/
+        find . -type f -name "*.py" | xargs pyupgrade --py39-plus
