--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,15 @@ build-backend = "setuptools.build_meta"
 name = "usercloudssdk"
 version = "1.0.10"
 description = "Python SDK for UserClouds"
-authors = [{ name = "Real Python", email = "info@realpython.com" }]
+authors = [{ name = "UserClouds", email = "info@userclouds.com" }]
+classifiers = [
+    Development Status :: 4 - Beta
+    "Intended Audience :: Developers",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11"
+]
 license = { file = "LICENSE" }
 dependencies = [
   "certifi >= 2023.7.2",
